updated new micro bot image and alignment fixes

--- a/src/app/pages/rpautomation/rpa-studio-designerworkspace/rpa-studio-designerworkspace.component.css
+++ b/src/app/pages/rpautomation/rpa-studio-designerworkspace/rpa-studio-designerworkspace.component.css
@@ -300,6 +300,12 @@
   position: absolute;
   top: 14px;
   text-align: center !important;
+  display: inline-block;
+  width: 100%;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 0.5cm;
+  color: #001c47 !important;
 }
 
 .publishButton {
@@ -335,4 +341,9 @@
   font-weight: 300;
   /* margin-top:-13px; */
   text-align: center;
+}
+.darker-icon {
+  /* color: #cf4949; */
+  color:black;
+  font-weight: bold;
 }
